More sonar fixes